# git-repo-updater

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG  LICENSE  Pipfile  README.md  gitup.py  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql-analysis.yml
gitup/: __init__.py  __main__.py  cli.py  config.py  migrate.py  output.py  script.py  update.py
gitup/test/: __init__.py  test_cli.py
src/gitup/: __init__.py  __main__.py  cli.py  config.py  migrate.py  update.py
src/gitup/test/: __init__.py  test_bookmarks.py  test_cli.py
